--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>OpenMed</h1>
 
-Wiki containing all medical records in OpenMed with discussion. https://github.com/avi33tbtt/OpenMed/wiki/OpenMed-Patient-Record-Mirror  
+<p> <a href="https://github.com/avi33tbtt/OpenMed/wiki/OpenMed-Patient-Record-Mirror">Wiki</a>  containing all medical records in OpenMed with discussion.</p> 
